адаптивная разметка до секции client,мобильная версия этой сеции

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </section>
       <!--ОСОБЕННОСТИ-->
-      <!-- <section class="features section">
+      <section class="features section">
         <div class="container">
           <h2 class="features__title visually-hidden">Наши преимущиства</h2>
           <ul class="features__list list">
@@ -123,7 +123,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Чем мы занимаемся-->
       <!-- <section class="work section">
         <div class="container">
@@ -160,7 +160,7 @@
         </div>
       </section> -->
       <!--НАША КОМАНДА-->
-      <!-- <section class="team section">
+      <section class="team section">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
@@ -169,8 +169,6 @@
                 class="team__img"
                 src="./images/team/igor.jpg"
                 alt="Игорь Демьяненко"
-                width="270"
-                height="260"
               />
               <div class="team__container">
                 <h3 class="team__player">Игорь Демьяненко</h3>
@@ -212,8 +210,6 @@
                 class="team__img"
                 src="./images/team/olga.jpg"
                 alt="Ольга Репина"
-                width="270"
-                height="260"
               />
               <div class="team__container">
               <h3 class="team__player">Ольга Репина</h3>
@@ -255,8 +251,6 @@
                 class="team__img"
                 src="./images/team//nicholas.jpg"
                 alt="Николай Тарасов"
-                width="270"
-                height="260"
               />
               <div class="team__container">
               <h3 class="team__player">Николай Тарасов</h3>
@@ -298,8 +292,6 @@
                 class="team__img"
                 src="./images/team/michael.jpg"
                 alt="Михаил Ермаков"
-                width="270"
-                height="260"
               />
               <div class="team__container">
               <h3 class="team__player">Михаил Ермаков</h3>
@@ -338,9 +330,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--ПОСТОЯННЫЕ КЛИЕНТЫ-->
-      <!-- <section class="client section">
+      <section class="client section">
         <div class="container">
           <h2 class="client__title">Постоянные клиенты</h2>
           <ul class="client__list list">
@@ -388,7 +380,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!--ПОДВАЛ СТРАНИЦЫ-->
     <!-- <footer class="footer">
