адаптирует footer и portfolio

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       </section>
     </main>
     <!--ПОДВАЛ СТРАНИЦЫ-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer__container">
         <div class="footer__address">
         <a class="logo logo__footer link" href="./index.html">
@@ -445,7 +445,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!--МОДАЛЬНОЕ ОКНО-->
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
