--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
   </head>
   
   <body>
-        <header class="header header__box">
+        <!-- <header class="header header__box"> -->
           <!--НАВИГАЦИЯ ПО СТРАНИЦАМ-->
-          <div class="container header__container">
+          <!-- <div class="container header__container">
             <nav class="navigation">
               <a class="logo logo__header link" href="./index.html">
                 <span class="logo logo_theme_color">Web</span>Studio</a>
@@ -49,7 +49,7 @@
                   +38 096 111 11 11</a>
               </li>
             </ul>
-          </div>
+          </div> -->
         </header>
 
     <!-- <h1>Портфолио</h1> -->
@@ -79,11 +79,9 @@
           <li class="gallery__item">
             <a class="gallery__link link" href="#">
               <div class="gallery__wrapper">
-              <img
+              <img class="gallery__img"
                 src="./images/gallery/notebook.jpg"
                 alt="технокряк"
-                width="370"
-                height="294"
               />
               <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -97,11 +95,9 @@
           <li class="gallery__item">
             <a class="gallery__link link" href="#">
               <div class="gallery__wrapper">
-              <img
+              <img class="gallery__img"
                 src="./images/gallery/basketball.jpg"
                 alt="баскетбол"
-                width="370"
-                height="294"
               />
               <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -117,11 +113,9 @@
           <li class="gallery__item">
             <a class="gallery__link link" href="#">
               <div class="gallery__wrapper">
-              <img
+              <img class="gallery__img"
                 src="./images/gallery/seafood.jpg"
                 alt="логотип ресторана"
-                width="370"
-                height="294"
               />
               <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -137,11 +131,9 @@
           <li class="gallery__item">
             <a class="gallery__link link" href="#">
               <div class="gallery__wrapper">
-              <img
+              <img class="gallery__img"
                 src="./images/gallery/headphones.jpg"
                 alt="наушники"
-                width="370"
-                height="294"
               />
               <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -157,11 +149,9 @@
           <li class="gallery__item">
             <a class="gallery__link link" href="#">
               <div class="gallery__wrapper">
-              <img
+              <img class="gallery__img"
                 src="./images/gallery/box.jpg"
                 alt="коробки"
-                width="370"
-                height="294"
               />
               <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -177,11 +167,9 @@
           <li class="gallery__item">
             <a class="gallery__link link" href="#">
               <div class="gallery__wrapper">
-              <img
+              <img class="gallery__img"
                 src="./images/gallery/borders.jpg"
                 alt="веб сайт"
-                width="370"
-                height="294"
               />
               <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -197,11 +185,9 @@
           <li class="gallery__item">
             <a class="gallery__link link" href="#">
               <div class="gallery__wrapper">
-              <img
+              <img class="gallery__img"
                 src="./images/gallery/book.jpg"
                 alt="книга"
-                width="370"
-                height="294"
               />
               <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -217,11 +203,9 @@
           <li class="gallery__item">
             <a class="gallery__link link" href="#">
               <div class="gallery__wrapper">
-              <img
+              <img class="gallery__img"
                 src="./images/gallery/lab.jpg"
                 alt="бирка lab"
-                width="370"
-                height="294"
               />
               <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -237,11 +221,9 @@
           <li class="gallery__item">
             <a class="gallery__link link" href="#">
               <div class="gallery__wrapper">
-              <img
+              <img class="gallery__img"
                 src="./images/gallery/business.jpg"
                 alt="приложение"
-                width="370"
-                height="294"
               />
               <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
