создает хедер мобильное меню

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header class="header header__box">
       <!--НАВИГАЦИЯ ПО СТРАНИЦАМ-->
-      <!-- <div class="container header__container">
+      <div class="container header__container">
         <nav class="navigation">
           <a class="logo logo__header link" href="./index.html">
             <span class="logo logo_theme_color">Web</span>Studio</a>
@@ -38,6 +38,11 @@
             </li>
           </ul>
         </nav>
+        <button class="burger-btn">
+          <svg class="burger-btn__icon">
+            <use href="./images/sprite.svg#icon-burger"></use>
+          </svg>
+        </button>
         <ul class="header__contact-list list">
           <li class="header__contact-item">
             <a class="header__contact-link link" href="mailto:info@devstudio.com">
@@ -55,7 +60,16 @@
           </li>
         </ul>
       </div>
-    </header> -->
+      <div class="mobile-menu">
+        <div class="container mobile-menu__container">
+        <button class="mobile-menu__btn">
+          <svg class="mobile-menu__icon">
+            <use href="./images/sprite.svg#icon-close"></use>
+          </svg>
+        </button>
+        </div>
+      </div>
+    </header>
 
     <main>
       <!--HERO-->
