--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
   </head>
   
   <body>
-        <!-- <header class="header header__box"> -->
+        <header class="header header__box">
           <!--НАВИГАЦИЯ ПО СТРАНИЦАМ-->
-          <!-- <div class="container header__container">
+          <div class="container header__container">
             <nav class="navigation">
               <a class="logo logo__header link" href="./index.html">
                 <span class="logo logo_theme_color">Web</span>Studio</a>
@@ -49,7 +49,7 @@
                   +38 096 111 11 11</a>
               </li>
             </ul>
-          </div> -->
+          </div>
         </header>
 
     <!-- <h1>Портфолио</h1> -->
