Завершает разметку мобильной/таблетки версии

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </li>
           </ul>
         </nav>
-        <button class="burger-btn">
+        <button class="burger-btn" data-menu-open>
           <svg class="burger-btn__icon">
             <use href="./images/sprite.svg#icon-burger"></use>
           </svg>
@@ -60,13 +60,46 @@
           </li>
         </ul>
       </div>
-      <div class="mobile-menu">
+      <div class="mobile-menu" data-menu>
         <div class="container mobile-menu__container">
-        <button class="mobile-menu__btn">
+        <button class="mobile-menu__btn mobile-menu__close-btn" data-menu-close>
           <svg class="mobile-menu__icon">
             <use href="./images/sprite.svg#icon-close"></use>
           </svg>
         </button>
+        <ul class="nav-list list">
+          <li class="nav-list__item">
+            <a href="#" class="nav-list__link link current">Студия</a>
+          </li>
+          <li class="nav-list__item">
+            <a href="./portfolio.html" class="nav-list__link link">Портфолио</a>
+          </li>
+          <li class="nav-list__item">
+            <a href="#" class="nav-list__link link">Контакты</a>
+          </li>
+        </ul>
+        <ul class="contact list">
+          <li class="contact__item">
+            <a href="tel:+380961111111" class="contact__link link current">+38 096 111 11 11</a>
+          </li>
+          <li class="contact__item">
+            <a href="mailto:info@devstudio.com" class="contact__link link">info@devstudio.com</a>
+          </li>
+        </ul>
+        <ul class="social-menu list">
+          <li class="social-menu__item">
+            <a href="" class="social-menu__link menu-line link">Instagram</a>
+          </li>
+          <li class="social-menu__item">
+            <a href="" class="social-menu__link menu-line link">Twitter</a>
+          </li>
+          <li class="social-menu__item">
+            <a href="" class="social-menu__link menu-line link">Facebook</a>
+          </li>
+          <li class="social-menu__item">
+            <a href="" class="social-menu__link link">LinkedIn</a>
+          </li>
+        </ul>
         </div>
       </div>
     </header>
@@ -139,7 +172,7 @@
         </div>
       </section>
       <!--Чем мы занимаемся-->
-      <!-- <section class="work section">
+      <section class="work section">
         <div class="container">
           <h2 class="work__title">Чем мы занимаемся</h2>
           <ul class="work__list list">
@@ -172,7 +205,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--НАША КОМАНДА-->
       <section class="team section">
         <div class="container">
@@ -461,7 +494,7 @@
       </div>
     </footer>
     <!--МОДАЛЬНОЕ ОКНО-->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="close-btn" type="button" data-modal-close>
           <svg class="close-btn__icon">
@@ -506,7 +539,8 @@
           <button class="modal-form-btn" type="submit">Отправить</button>
         </form>
       </div>
-    </div> -->
-    <!-- <script src="./js/modal.js"></script> -->
+    </div>
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
