--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,11 @@
                 </li>
               </ul>
             </nav>
+            <button class="burger-btn" data-menu-open>
+              <svg class="burger-btn__icon">
+                <use href="./images/sprite.svg#icon-burger"></use>
+              </svg>
+            </button>
             <ul class="header__contact-list list">
               <li class="header__contact-item">
                 <a class="header__contact-link link" href="mailto:info@devstudio.com">
@@ -50,6 +55,48 @@
               </li>
             </ul>
           </div>
+                <div class="mobile-menu" data-menu>
+                  <div class="container mobile-menu__container">
+                    <button class="mobile-menu__btn mobile-menu__close-btn" data-menu-close>
+                      <svg class="mobile-menu__icon">
+                        <use href="./images/sprite.svg#icon-close"></use>
+                      </svg>
+                    </button>
+                    <ul class="nav-list list">
+                      <li class="nav-list__item">
+                        <a href="./index.html" class="nav-list__link link">Студия</a>
+                      </li>
+                      <li class="nav-list__item">
+                        <a href="#" class="nav-list__link link current">Портфолио</a>
+                      </li>
+                      <li class="nav-list__item">
+                        <a href="#" class="nav-list__link link">Контакты</a>
+                      </li>
+                    </ul>
+                    <ul class="contact list">
+                      <li class="contact__item">
+                        <a href="tel:+380961111111" class="contact__link link current">+38 096 111 11 11</a>
+                      </li>
+                      <li class="contact__item">
+                        <a href="mailto:info@devstudio.com" class="contact__link link">info@devstudio.com</a>
+                      </li>
+                    </ul>
+                    <ul class="social-menu list">
+                      <li class="social-menu__item">
+                        <a href="" class="social-menu__link menu-line link">Instagram</a>
+                      </li>
+                      <li class="social-menu__item">
+                        <a href="" class="social-menu__link menu-line link">Twitter</a>
+                      </li>
+                      <li class="social-menu__item">
+                        <a href="" class="social-menu__link menu-line link">Facebook</a>
+                      </li>
+                      <li class="social-menu__item">
+                        <a href="" class="social-menu__link link">LinkedIn</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
         </header>
 
     <!-- <h1>Портфолио</h1> -->
@@ -302,6 +349,8 @@
           </form>
         </div>
       </div>
-    </footer>    <script src="./js/modal.js"></script>
+    </footer>    
+    <script src="./js/mobile-menu.js"></script>
+
   </body>
 </html>
